--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
+    "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inappbrowser": "^2.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "^4.9.0",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -52,7 +55,9 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
