--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.4",
-    "cordova-android": "6.3.0",
-    "cordova-plugin-camera": "^4.0.1",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-inappbrowser": "^2.0.1",
+    "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.9.0",
     "ionic-angular": "3.9.2",
     "ionic-native": "^2.9.0",
