--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
+    "@angular/common": "5.2.3",
+    "@angular/compiler": "5.2.3",
+    "@angular/compiler-cli": "5.2.3",
+    "@angular/core": "5.2.3",
+    "@angular/forms": "5.2.3",
     "@angular/http": "^5.2.2",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.4.0",
+    "@angular/platform-browser": "5.2.3",
+    "@angular/platform-browser-dynamic": "5.2.3",
+    "@ionic-native/camera": "^4.5.3",
+    "@ionic-native/core": "^4.5.3",
+    "@ionic-native/file": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^5.0.0-rc.4",
+    "android-versions": "^1.3.0",
+    "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "^6.3.0",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^1.1.7",
@@ -36,11 +39,10 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.9.0",
     "ionic-angular": "3.9.2",
-    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.4",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
