--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.3",
     "@angular/platform-browser-dynamic": "5.2.3",
     "@ionic-native/camera": "^4.5.3",
+    "@ionic-native/contacts": "^4.5.3",
     "@ionic-native/core": "^4.5.3",
     "@ionic-native/file": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.5.3",
@@ -31,6 +32,7 @@
     "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "^6.3.0",
     "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inappbrowser": "^2.0.2",
@@ -60,7 +62,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-contacts": {}
     },
     "platforms": [
       "android"
