--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ionic/storage": "2.1.3",
     "android-versions": "^1.3.0",
     "angularfire2": "^5.0.0-rc.6",
-    "cordova-android": "^6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.7",
