--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
+    "moment": "^2.20.1",
     "rxjs": "5.5.4",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
