--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ionic/storage": "2.1.3",
     "android-versions": "^1.3.0",
     "angularfire2": "^5.0.0-rc.6",
-    "cordova-android": "^6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.7",
@@ -45,6 +45,7 @@
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "moment": "^2.20.1",
+    "onesignal-cordova-plugin": "^2.3.1",
     "rxjs": "5.5.4",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -64,7 +65,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-contacts": {}
+      "cordova-plugin-contacts": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
