--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "^5.2.2",
     "@angular/platform-browser": "5.2.3",
     "@angular/platform-browser-dynamic": "5.2.3",
+    "@ionic-native/calendar": "^4.5.3",
     "@ionic-native/camera": "^4.5.3",
     "@ionic-native/contacts": "^4.5.3",
     "@ionic-native/core": "^4.5.3",
@@ -31,6 +32,7 @@
     "android-versions": "^1.3.0",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "^6.3.0",
+    "cordova-plugin-calendar": "^5.0.0",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^1.1.7",
@@ -43,6 +45,8 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-rating": "^1.2.2",
+    "ionic3-calendar": "^1.1.6",
+    "ionic3-calendar-en": "^1.0.8",
     "ionicons": "3.0.0",
     "moment": "^2.20.1",
     "onesignal-cordova-plugin": "^2.3.1",
@@ -66,7 +70,8 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
       "cordova-plugin-contacts": {},
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-calendar": {}
     },
     "platforms": [
       "android"
