--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/core": "^4.5.3",
     "@ionic-native/file": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.5.3",
+    "@ionic-native/sms": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
@@ -41,6 +42,7 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sms-plugin": "^0.1.11",
     "firebase": "^4.9.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -71,7 +73,8 @@
       "cordova-plugin-file": {},
       "cordova-plugin-contacts": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-calendar": {}
+      "cordova-plugin-calendar": {},
+      "cordova-sms-plugin": {}
     },
     "platforms": [
       "android"
